fixed chargrid and generate button spacing

--- a/src/styles/CharactersGridStyle.css
+++ b/src/styles/CharactersGridStyle.css
@@ -41,7 +41,7 @@
 /* TABLET CSS */
 @media screen and (min-width: 768px) and (max-width: 1366px) {
     .column {
-        width: 8%
+        width: 7.45%
     }
 }
 
